--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sahid CV</title>
-    <link rel="stylesheet" href="sahidcv.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="container">
